Fixed some v2 layout issues

--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -130,7 +130,7 @@
   }
 }
 
-.layout-top-middle, .layout-top-left, .layout-top-right {
+.layout-top-middle, .layout-top, .layout-top-right {
   flex-direction: column;
 
   .details, .content {
